syntax = "proto3";
import "ConstSkill2TableItemEx.proto";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "ConstSkill2TableProtobuf";

message	ConstSkill2Table  {
	repeated	ConstSkill2TableItemEx	items = 1;
}