syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "ConstSkill2TableItemExProtobuf";

message	ConstSkill2TableItemEx  {
	optional	string	id = 1;
	optional	string	name = 2;
	optional	string	icon = 3;
	optional	string	description = 4;
	optional	string	priority = 5;
	optional	string	action = 6;
	optional	string	effect = 7;
	optional	string	levels = 8;
	optional	string	logic = 9;
}